--- a/mission.html
+++ b/mission.html
@@ -21,19 +21,19 @@
         <tr>
             <td colspan="2" bgcolor="green" height="50">
                 <center>
-                    <a href="/">
+                    <a href="index.html">
                         <font color="white" face="sans-serif">Home</font>
                     </a> &nbsp;&nbsp;&nbsp;
-                    <a href="/about.html">
+                    <a href="about.html">
                         <font color="white" face="sans-serif">About us</font>
                     </a> &nbsp;&nbsp;&nbsp;
-                    <a href="/mission.html">
+                    <a href="mission.html">
                         <font color="white" face="sans-serif"><strong>Mission & Vision</strong></font>
                     </a>&nbsp;&nbsp;&nbsp;
-                    <a href="/alumni.html">
+                    <a href="alumni.html">
                         <font color="white" face="sans-serif">Alumni</font>
                     </a>&nbsp;&nbsp;&nbsp;
-                    <a href="/contact.html">
+                    <a href="contact.html">
                         <font color="white" face="sans-serif">Contact</font>
                     </a>
                 </center>
